re PR libgomp/43569 (libgomp: Conditional jump or move depends on uninitialised value)

PR libgomp/43569
	* sections.c (gomp_sections_init): Initialize ws->mode.

From-SVN: r158564